Widget spacing fix for migration

--- a/migration/migration.less
+++ b/migration/migration.less
@@ -26,6 +26,8 @@
     }
     
     .container .widget {
+        margin-left: 0;
+        margin-right: 0;
         width: 100%;
         
         @media @tablet {
